--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.10
 
-WORKDIR /innoid-api
-COPY requirements.txt /innoid-api
+WORKDIR /api
+COPY requirements.txt /api
 
 RUN pip install -r requirements.txt
 
 ENV PROMETHEUS_MULTIPROC_DIR=prometheus-multiproc
 
-COPY . /innoid-api
+COPY . /api
 
-CMD ["gunicorn", "-c", "gunicorn_config.py", "--worker-class=gthread", "api:create_app()"]
+CMD ["gunicorn", "-c", "gunicorn_config.py", "--worker-class=gthread", "api:create_app()", "--access-logfile", "guni.log"]
