--- a/Telegram-Bot/Dockerfile
+++ b/Telegram-Bot/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.10
 
-WORKDIR /innoid-tg-bot
-COPY requirements.txt /innoid-tg-bot
+WORKDIR /tg-bot
+COPY requirements.txt /tg-bot
 
 RUN pip install -r requirements.txt
 
-COPY . /innoid-tg-bot
+COPY . /tg-bot
 
-CMD ["python", "run.py"]
+CMD ["python", "-u", "run.py"]
