--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
-.idea
+__pycache__/
+__pypackages__/
+*.py[cod]
+*$py.class
+
+!.gitkeep
+
+dist/
+
+nginx.conf
+
+*.db
+*.sqlite3
+*.sqlite3-journal
+
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+.idea/
+.vscode/
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
