--- a/Core/pyproject.toml
+++ b/Core/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy-utils = "^0.41.1"
 fastapi = "^0.97.0"
 uvicorn = "^0.22.0"
 psycopg2 = "^2.9.6"
+requests = "^2.31.0"
 
 
 [build-system]
